# plex-tools

./: .gitignore  .infisical.json  .pylintrc  LICENSE  README.md  clean_library.py  create_dev_env.sh  create_prod_env.sh  deduplex.py  main.py  music_remove_duplicates.py  pyproject.toml  requirements.dev.txt  requirements.txt  sample.env  shazam_file.py  test_and_lint.sh
.github/workflows/: pylint.yml
app/: main.py  sample.env
app/config/: __init__.py  config.py
app/db/: __init__.py  database.py  models.py
app/plex/: api.py
app/routers/: auth.py
app/templates/: account.j2  base.j2  duplicates.j2  home.j2  preferences.j2
config/: config.py
docs/: autoplex_web.md  deduplex.md
helpers/: autoplex.service
models/: __init__.py  gd_duplicate_set.py  gd_plex_track.py  test_gd_duplicate_set.py  test_gd_plex_track.py
plex_utils/: __init__.py  plex_auth.py  plex_connect.py  test_plex_connect.py  wrappers.py
scripts/: create_dev_env.sh  create_prod_env.sh  create_sample_env.sh  deploy.sh
templates/: base.j2  home.j2
