[project]
name = "plex-tools"
version = "0.2.0"
description = "Gosh Darned Plex Tools"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "plexapi>=4.16.1",
    "ruff>=0.9.4",
    "sqlalchemy>=2.0.37",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pylint>=3.3.4",
]
