[project]
name = "autoplex"
version = "0.2.0"
description = "AutoPlex"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.5",
    "plexapi>=4.16.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.4",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pylint>=3.3.4",
]
